src/objects/auSTPDItems__c.object
<CustomObject>
    <fields>
        <fullName>D_ContinuedImprovement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>継続改善</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D_Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>完了</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>D_NextIssueShort__c</fullName>
        <label>今後の課題 (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_NextIssue__c</fullName>
        <label>今後の課題</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>D_ResultShort__c</fullName>
        <label>結果 (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Result__c</fullName>
        <label>結果</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>D_Steady__c</fullName>
        <defaultValue>false</defaultValue>
        <label>定常化</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataShort__c</fullName>
        <label>Data (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsCompleteD__c</fullName>
        <formula>IF(OR(TEXT(Type__c) != &apos;Do&apos;, ISBLANK(D_ResultShort__c) &amp;&amp; ISBLANK(D_NextIssueShort__c) &amp;&amp;  NOT(D_Steady__c) &amp;&amp;  NOT(D_ContinuedImprovement__c) &amp;&amp;  NOT(D_Finished__c) ), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCompleteD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCompleteP__c</fullName>
        <formula>IF(OR(TEXT(Type__c) != &apos;Plan&apos;, ISBLANK(P_SolutionShort__c) &amp;&amp; ISBLANK(P_ExecutionPlanShort__c)), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCompleteP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCompleteT__c</fullName>
        <formula>IF(OR(TEXT(Type__c) != &apos;Think&apos;, ISBLANK(T_ThemeShort__c) &amp;&amp; ISBLANK(T_CauseShort__c)), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCompleteT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_ExecutionPlanShort__c</fullName>
        <label>実行計画 (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_ExecutionPlan__c</fullName>
        <label>実行計画</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P_SolutionShort__c</fullName>
        <label>解決策 (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_Solution__c</fullName>
        <label>解決策</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>STPDDo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>STPD (Do)</label>
        <referenceTo>auSTPD__c</referenceTo>
        <relationshipLabel>STPD活動 (STPD (Do))</relationshipLabel>
        <relationshipName>auSTPD_auSTPDDetail_Do</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>STPDPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>STPD (Plan)</label>
        <referenceTo>auSTPD__c</referenceTo>
        <relationshipLabel>STPD活動 (STPD (Plan))</relationshipLabel>
        <relationshipName>auSTPD_auSTPDDetail_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>STPDThink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>STPD (Think)</label>
        <referenceTo>auSTPD__c</referenceTo>
        <relationshipLabel>STPD活動 (STPD (Think))</relationshipLabel>
        <relationshipName>auSTPD_auSTPDDetail_Think</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>STPD__c</fullName>
        <label>STPD</label>
        <referenceTo>auSTPD__c</referenceTo>
        <relationshipLabel>STPD活動</relationshipLabel>
        <relationshipName>auSTPD_auSTPDDetail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SortNo__c</fullName>
        <label>SortNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_CauseShort__c</fullName>
        <label>原因 (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Cause__c</fullName>
        <label>原因</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>T_ThemeShort__c</fullName>
        <label>課題 (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Theme__c</fullName>
        <label>課題</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Think</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>STPD活動</label>
    <nameField>
        <label>STPD活動 Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>